--- a/Challenge/Challenge/Scenes/Movie Details/View/MovieDetailsViewController.xib
+++ b/Challenge/Challenge/Scenes/Movie Details/View/MovieDetailsViewController.xib
@@ -16,6 +16,7 @@
                 <outlet property="moviePlotLabel" destination="PLc-B3-pKI" id="iw6-2J-TMQ"/>
                 <outlet property="moviePosterImageView" destination="K0o-QU-Jrn" id="eMm-uo-EiW"/>
                 <outlet property="movieReleaseDateLabel" destination="PBP-vr-7lo" id="6qy-AP-u1O"/>
+                <outlet property="recommendationsStackView" destination="cN5-9b-u9X" id="bGT-Pj-Ftc"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
             </connections>
         </placeholder>
@@ -46,19 +47,19 @@
                                                     <rect key="frame" x="20" y="20" width="374" height="608.5"/>
                                                     <subviews>
                                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Avangers: Endgame" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="L68-Jt-rCb">
-                                                            <rect key="frame" x="0.0" y="0.0" width="374" height="35"/>
-                                                            <fontDescription key="fontDescription" type="boldSystem" pointSize="29"/>
+                                                            <rect key="frame" x="0.0" y="0.0" width="374" height="263"/>
+                                                            <fontDescription key="fontDescription" type="boldSystem" pointSize="37"/>
                                                             <nil key="textColor"/>
                                                             <nil key="highlightedColor"/>
                                                         </label>
                                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Release Date: 26 of April 2019" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="PBP-vr-7lo">
-                                                            <rect key="frame" x="0.0" y="55" width="374" height="18"/>
+                                                            <rect key="frame" x="0.0" y="283" width="374" height="18"/>
                                                             <fontDescription key="fontDescription" type="system" pointSize="15"/>
                                                             <nil key="textColor"/>
                                                             <nil key="highlightedColor"/>
                                                         </label>
                                                         <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="CYn-YH-rCi">
-                                                            <rect key="frame" x="0.0" y="93" width="374" height="116"/>
+                                                            <rect key="frame" x="0.0" y="321" width="374" height="116"/>
                                                             <subviews>
                                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Description:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fc7-pC-0iV">
                                                                     <rect key="frame" x="0.0" y="0.0" width="374" height="18"/>
@@ -74,7 +75,7 @@
                                                             </subviews>
                                                         </stackView>
                                                         <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="dud-5o-RGU">
-                                                            <rect key="frame" x="0.0" y="229" width="374" height="151.5"/>
+                                                            <rect key="frame" x="0.0" y="457" width="374" height="151.5"/>
                                                             <subviews>
                                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Plot:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3N5-dR-MVi">
                                                                     <rect key="frame" x="0.0" y="0.0" width="374" height="18"/>
@@ -89,17 +90,17 @@
                                                                 </label>
                                                             </subviews>
                                                         </stackView>
-                                                        <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="cN5-9b-u9X">
-                                                            <rect key="frame" x="0.0" y="400.5" width="374" height="208"/>
+                                                        <stackView hidden="YES" opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="cN5-9b-u9X">
+                                                            <rect key="frame" x="0.0" y="608.5" width="374" height="190"/>
                                                             <subviews>
                                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Recommended:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ttv-c2-1Hg">
-                                                                    <rect key="frame" x="0.0" y="0.0" width="374" height="18"/>
+                                                                    <rect key="frame" x="0.0" y="0.0" width="374" height="0.0"/>
                                                                     <fontDescription key="fontDescription" type="system" pointSize="15"/>
                                                                     <color key="textColor" systemColor="systemGrayColor"/>
                                                                     <nil key="highlightedColor"/>
                                                                 </label>
                                                                 <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" dataMode="none" translatesAutoresizingMaskIntoConstraints="NO" id="Y7A-PL-398" customClass="RecommendedCollectionView" customModule="Challenge" customModuleProvider="target">
-                                                                    <rect key="frame" x="0.0" y="38" width="374" height="170"/>
+                                                                    <rect key="frame" x="0.0" y="20" width="374" height="170"/>
                                                                     <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                                                     <constraints>
                                                                         <constraint firstAttribute="height" constant="170" id="eTb-bM-G6Y"/>
